client/src/index.css
@import url('https://fonts.googleapis.com/css2?family=Ancizar+Serif:ital,wght@0,300..900;1,300..900&family=Edu+AU+VIC+WA+NT+Arrows:wght@400..700&family=M+PLUS+Rounded+1c&family=Oswald:wght@200..700&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');

@import "tailwindcss";

*{
  font-family: "Roboto Condensed", sans-serif;
  
}
.no-scrollbar::-webkit-scrollbar{
  display: none;
}

